# NeuralLite

./: .gitignore  CONTRIBUTING.md  LICENSE  NeuraLite-main.py  README.md  payload.json  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
app/src/main/java/com/neurallite/app/: MainActivity.kt  NeuralliteApp.kt
app/src/main/java/com/neurallite/app/engine/: LlamaEngine.kt
app/src/main/java/com/neurallite/app/hardware/: HardwareScanner.kt
app/src/main/java/com/neurallite/app/models/: ModelCatalog.kt  ModelManager.kt
app/src/main/java/com/neurallite/app/server/: NeuralliteServer.kt  NeuralliteServerService.kt  ServerEvent.kt
app/src/main/java/com/neurallite/app/ui/components/: MetricCard.kt  ModelCard.kt  RequestLogRow.kt
app/src/main/java/com/neurallite/app/ui/screens/: ConfigScreen.kt  DetectScreen.kt  ModelsScreen.kt  ServerScreen.kt
app/src/main/java/com/neurallite/app/ui/theme/: NeuralliteTheme.kt
app/src/main/java/com/neurallite/app/viewmodel/: NeuralliteViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
